--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "proxy": "https://localhost:5500",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
